messaging_app/green_deployment.yaml
# Deploys our Django application
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: django-green-deployment
spec:
  replicas: 4 # Running 4 replicas for high availability
  selector:
    matchLabels:
      app: django
      version: green
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
        - name: django-app
          image: messaging_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
