messaging_app/mysql-deployment.yaml
# Deployment for our MySQL database using Secret for the password and
# PersistentVolumeClaim for storage
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-persistent-volume-claim
